src/test/deca/syntax/valid/method_body/test_method_body_asm.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
//   1
// Historique:
//    cree le 01/01/2024

class B {
   void f() asm("nop");

    void g() asm("
    nop
    nop");
}